After modifying the Tostring method, tables are added into the Sandbox following the prompt on the module instructions. The tables should be aligned and readable with the improved toString code as well as the table implementation in the Sandbox code.