@@ -1,10 +1,8 @@
 package apps;
 
-import java.util.Arrays;
 import java.util.List;
 
-import models.Table;
-import types.LookupTable;
+import types.SearchTable;
 
 public class Sandbox {
 	public static void main(String[] args) {
@@ -13,12 +11,31 @@ public class Sandbox {
 		 * or demonstrate arbitrary code.
 		 */
 
-		Table table1 = new LookupTable("example", List.of("K", "F1", "F2", "F3"));
+		// Table 1: Employee Information
+		SearchTable table1 = new SearchTable("Companies", List.of("Table #", "Name", "Position"));
 
-		table1.put("a", List.of("Abc", 1, true));
-		table1.put("b", List.of("Uvw", 2, false));
-		table1.put("c", Arrays.asList("Xyz", 3, null));
+		table1.put("162", List.of("Leidos", "CS Intern"));
+		table1.put("201", List.of("Terrasim", "GIS Consultant"));
+		table1.put("144", List.of("M&S", "IT Technician"));
 
 		System.out.println(table1);
+
+		// Table 2: Product Catalog
+		SearchTable table2 = new SearchTable("ProductCatalog", List.of("ProductID", "Name", "Price"));
+
+		table2.put("P001", List.of("RTX 3060", 400.0));
+		table2.put("P002", List.of("Ryzen 5", 250.0));
+		table2.put("P003", List.of("NZXT H510", 90.0));
+
+		System.out.println(table2);
+
+		// Table 3: Customer Data
+		SearchTable table3 = new SearchTable("Factions", List.of("Moral", "Name", "Game"));
+
+		table3.put("Evil", List.of("Institute", "Fallout 4"));
+		table3.put("Mixed", List.of("BOS", "Fallout 3, NV, 4, 76"));
+		table3.put("Good", List.of("NCR", "Fallout 1, 2, NV"));
+
+		System.out.println(table3);
 	}
 }
